--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "local": "./node_modules/.bin/nodemon --watch app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
-    "ejs": "^2.5.7",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "normalize.css": "^7.0.0",
     "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
